test/fixtures/public/analysis/fail/params_args.jmm
import T;

class Child {
    int a;
    boolean b;

    public int f() {
        T c;
        int[] d;
        a = 1;
        b = true;
        c = new T();
        d = new int[10];
        this.call1(a, b, a);
        this.call1(a);
        this.call2(a, b);

        return 0;
    }

    public int call1(int x, boolean y) {
        return 1;
    }
    public boolean call2(T w, int[] z) {
        return false;
    }
}